@@ -1223,7 +1223,6 @@ class printer  ()= object(self:'self)
 
   method directive_argument f x =
     (match x with
-    | Pdir_none -> ()
     | Pdir_string (s) -> pp f "@ %S" s
     | Pdir_int (i) -> pp f "@ %d" i
     | Pdir_ident (li) -> pp f "@ %a" self#longident li
@@ -1236,7 +1235,8 @@ class printer  ()= object(self:'self)
         self#list self#structure_item f s ;
         pp_close_box f ();
     | Ptop_dir (s, da) ->
-        pp f "@[<hov2>#%s@ %a@]" s self#directive_argument da
+        pp f "@[<hov2>#%s@ %a@]" s
+          (self#list ~sep:" " self#directive_argument) da
 end;;
 
 
@@ -1250,7 +1250,8 @@ let toplevel_phrase f x =
    (* pp_print_list structure_item f s ; *)
    (* pp_close_box f (); *)
   | Ptop_dir (s, da) ->
-   pp f "@[<hov2>#%s@ %a@]" s default#directive_argument da
+   pp f "@[<hov2>#%s@ %a@]" s
+     (default#list ~sep:" " default#directive_argument) da
    (* pp f "@[<hov2>#%s@ %a@]" s directive_argument da *)
 
 let expression f x =
